# resume-parser

./: .env  .gitignore  README.md  app.py  pyproject.toml  resume-parser.service
migrations/versions/: 6a4bf3b784ea_.py  7bb3658e85a1_.py  972b88e00104_.py  a8b9d313cba1_.py
templates/: add.html  base.html  index.html  login.html  search.html
